# psrqpy

./: .coveragerc  .gitignore  .pep8speaks.yml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  Dockerfile  PvsPdot.ipynb  README.md  TestAltair.ipynb  optional_requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_requirements.txt
.github/workflows/: build.yml  pypi.yml
conda/: .gitignore  conda_build.sh
docs/: Makefile
docs/source/: conf.py  config.rst  index.rst  pulsar.rst  query.rst  references.rst  utils.rst
docs/source/images/: PvsPdot.ipynb
paper/: Makefile  paper.bib  paper.md  paper.tex
psrqpy/: __init__.py  conditions.py  config.py  pulsar.py  search.py  utils.py
psrqpy/tests/: conftest.py  query_test.py  test_catalogue.db
test/: conftest.py  derived_catalogue.db  query_test.py  test_catalogue.db
