[metadata]
name = psrqpy
author = Matthew Pitkin
author_email = matthew.pitkin@ligo.org
description = A Python module for querying the ATNF pulsar catalogue
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mattpitkin/psrqpy
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy

[options]
python_requires = >=3.6, <4
setup_requires =
    setuptools >= 45
    setuptools_scm >= 6.2
    wheel
install_requires =
    ads
    astropy>=3.2
    beautifulsoup4
    matplotlib
    numpy>=1.16
    packaging
    pandas>0.21
    requests
    scipy
include_package_data = True
packages = find:

[options.extras_require]
test =
    pytest>=3.9.1
    pytest-cov
    pytest-socket
docs =
    autodoc
    recommonmark
    sphinx >= 2.0
    sphinx_rtd_theme

[bdist_wheel]
universal = 1